feat: add audit and guidelines modules, enhance partners and catalogs modules, and configure database settings

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,11 @@ PORT=
 CORS_ORIGINS_DEVELOPMENT=
 CORS_ORIGINS_TEST=
 CORS_ORIGINS_PRODUCTION=
+
+# Database configurations
+DB_HOST=
+DB_PORT=
+DB_USER=
+DB_PASS=
+DB_NAME=
+DB_SSL=
